[package]
name = "prism-llae"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "prism_llae"
path = "src/lib.rs"

[dependencies]
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Ole",
    "Win32_Security",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Devices_Properties",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_UI_Shell_PropertiesSystem",
]
